# czech-banking-ci

./: .gitignore  CI-MONITOR-SPEC.md  pyproject.toml
.claude/: launch.json  settings.local.json
aistudio_design/: README.md  metadata.json
aistudio_design/src/: App.tsx
config/: settings.yaml  sources.yaml
config/competitors/: air_bank.yaml  ceska_sporitelna.yaml  csob.yaml  fio_banka.yaml  komercni_banka.yaml  mbank.yaml  moneta.yaml  partners_bank.yaml  raiffeisenbank.yaml  revolut_cz.yaml  unicredit.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/data/db/: ci_monitor.sqlite
dashboard/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
dashboard/src/components/: Layout.tsx  SeverityBadge.tsx
dashboard/src/pages/: Competitors.tsx  Markets.tsx  Overview.tsx  Signals.tsx  Status.tsx
src/: api.py  cli.py  export.py
src/analysis/: change_detector.py
src/collectors/: ares.py  base.py  job_postings.py  market_data.py  news.py
src/models/: __init__.py  database.py  schema.sql
